<?xml version="1.0"?>
<package format="2">
  <name>melfa_description</name>
  <version>0.0.4</version>
  <description>The melfa_description package</description>

  <author email="ryosuke.tajima@opensource-robotics.tokyo.jp">Ryosuke Tajima</author>
  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai(TORK) Developer Team</maintainer>
  <license>Apache License 2.0</license>
  <license>CC-BY-SA</license>

  <url type="website">http://wiki.ros.org/melfa_description</url>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <test_depend>roslaunch</test_depend>
  <test_depend>rostest</test_depend>

  <export> </export>
</package>
