<?xml version="1.0"?>
<package format="2">
  <name>melfa_robot</name>
  <version>0.0.4</version>
  <description>The melfa_robot meta package</description>

  <maintainer email="dev@opensource-robotics.tokyo.jp">Tokyo Opensource Robotics Kyokai (TORK) Developer Team</maintainer>

  <license>Apache License 2.0</license>
  <license>CC-BY-SA</license>

  <url type="website">http://wiki.ros.org/melfa_robot</url>
  <url type="repository">https://github.com/tork-a/melfa_robot</url>
  <url type="bugtracker">https://github.com/tork-a/melfa_robot/issues</url>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>melfa_description</exec_depend>
  <exec_depend>melfa_driver</exec_depend>
  <exec_depend>rv4fl_moveit_config</exec_depend>
  <exec_depend>rv7fl_moveit_config</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
